added cs go project

--- a/index.html
+++ b/index.html
@@ -62,49 +62,8 @@
 
 	<div id="project-wrapper"> <!-- start of project wrapper -->
 		<h1 class="section-spacing-top section-spacing-bottom">Projects</h1>
-		<div id="horde-clicker" class="row">
-			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 1</span>
-			<div class="project-logo col-xs-12">
-				<img height="100px" width="200px" src="images/clickerlogo.png">
-			</div>
-			<div class="project-pic-container row col-xs-12">
-				<div class="col-xs-12 col-sm-3 col-md-2">
-					<img height="275px" width="175px" src="images/clicker1.png">
-				</div>
-				<div class="col-xs-12 col-sm-3 col-md-2"> 
-					<img height="275px" width="175px" src="images/clicker2.png">
-				</div>
-				<div class="col-xs-12 col-sm-3 col-md-2">
-					<img height="275px" width="175px" src="images/clicker3.png">
-				</div>
-				<div class="col-xs-12 col-sm-3 col-md-2">
-					<img height="275px" width="175px" src="images/clicker4.png">
-				</div>
-				<div class="col-xs-12 col-sm-3 col-md-2">
-					<img height="275px" width="175px" src="images/clicker5.png">
-				</div>
-			</div>
-		</div>
-		<div class="project-desc">
-			<h5>A fun clicker game with a zombie infested theme built entirely for the android platform. I really enjoyed the original <a href="http://orteil.dashnet.org/cookieclicker/">cookie clicker</a> game, so this was my version of the game. It has achievements, statistics, and a nice UI to it!</h5>
-			<p>What I Learned:</p>
-			<ul>
-				<li>How to work with Android Studio and basics of making an app</li> 
-					<ul>
-						<li>Activity Lifecycle</li>
-						<li>Handling threading in an Android application</li>
-						<li>Working with List Views, Activities, Intent, etc.</li>
-					</ul>
-				<li>Implementing sound, animation, and vibration components to an android application</li>
-				<li>Designing for various screen sizes</li>
-			</ul>
-			<p>The game can be downloaded <a href="https://play.google.com/store/apps/details?id=com.justplaingoatapps.clicker">here</a>.&nbsp:)</p>
-		</div>
-
-		<hr>
-
 		<div id="fact-hack" class="row">
-			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 2</span>
+			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 1</span>
 			<div class="project-logo col-xs-12">
 				<img height="100px" width="200px" src="images/facthacklogo.png">
 			</div>
@@ -140,6 +99,42 @@
 
 		<hr>
 
+		<div id="stat-track" class="row">
+			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 2</span>
+			<div class="project-logo col-xs-12">
+				<img height="100px" width="200px" src="images/stattracklogo.png">
+			</div>
+			<div class="project-pic-container row col-xs-12">
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/stattrack1.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/stattrack2.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/stattrack3.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/stattrack4.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/stattrack5.png">
+				</div>
+			</div>
+		</div>
+		<div class="project-desc">
+			<h5>The following app allows you to track any player's stats for the game Counter-Strike: Global Offensive. The stats available include weapons, maps, achievements, general information (kill death ratio, total play time, last online), and previous match stats.</h5>
+			<p>What I Learned:</p>
+			<ul>
+				<li>How to use RxJava in an Android application. This was very beneficial considering I had to make chained API calls.</li>
+				<li>How to use Picasso in an Android application. The ability to cache my images in the various list views allowed for smooth scrolling.</li>
+				<li>Making GET requests to an API and incorporating the data inside the views.</li>
+			</ul>
+			<p>The app can be downloaded <a href="https://play.google.com/store/apps/details?id=com.justplaingoatappsgmail.stattrackerforcsgo">here</a>.&nbsp:)</p>
+		</div>
+
+		<hr>
+
 		<div id="mixtape-maker" class="row">
 			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 3</span>
 			<div class="project-logo col-xs-12">
@@ -170,6 +165,47 @@
 				<li>Commands to download audio using Youtube DL</li>
 			</ul>
 			<p>The source code can be viewed <a href="https://github.com/MichaelMuinos/Mix-Tape-Maker/blob/master/Converter.py">here</a>.&nbsp:)
+		</div>
+
+		<hr>
+
+		<div id="horde-clicker" class="row">
+			<span class="italic-section" style="font-size: 1.2em; margin-right: 10px;">Personal Project 4</span>
+			<div class="project-logo col-xs-12">
+				<img height="100px" width="200px" src="images/clickerlogo.png">
+			</div>
+			<div class="project-pic-container row col-xs-12">
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/clicker1.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2"> 
+					<img height="275px" width="175px" src="images/clicker2.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/clicker3.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/clicker4.png">
+				</div>
+				<div class="col-xs-12 col-sm-3 col-md-2">
+					<img height="275px" width="175px" src="images/clicker5.png">
+				</div>
+			</div>
+		</div>
+		<div class="project-desc">
+			<h5>A fun clicker game with a zombie infested theme built entirely for the android platform. I really enjoyed the original <a href="http://orteil.dashnet.org/cookieclicker/">cookie clicker</a> game, so this was my version of the game. It has achievements, statistics, and a nice UI to it!</h5>
+			<p>What I Learned:</p>
+			<ul>
+				<li>How to work with Android Studio and basics of making an app</li> 
+					<ul>
+						<li>Activity Lifecycle</li>
+						<li>Handling threading in an Android application</li>
+						<li>Working with List Views, Activities, Intent, etc.</li>
+					</ul>
+				<li>Implementing sound, animation, and vibration components to an android application</li>
+				<li>Designing for various screen sizes</li>
+			</ul>
+			<p>The game can be downloaded <a href="https://play.google.com/store/apps/details?id=com.justplaingoatapps.clicker">here</a>.&nbsp:)</p>
 		</div>
 		<div class="section-spacing-top-lg"></div>
 	</div> <!-- end of project wrapper -->
