small change to paragraph

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<h1>Introduction</h1>
 		<div class="col-md-1"></div>
 		<div class="col-xs-12 col-md-7" id="introduction">
-			<p>Welcome to my portfolio site! I am going into my 5th year as a <b>Computer Science student at California State Polytechnic University</b> in Pomona. Since I am close to graduation, I plan to immediately start my job hunt to look for a fun crowd to work with!</p>
+			<p>Welcome to my portfolio site! I am a freshly graduated <b>Computer Science student at California State Polytechnic University</b> in Pomona. Since I have recently graduated, I plan to immediately start my job hunt to look for a fun crowd to work with!</p>
 			<p>If you continue on, you will find information on some personal projects I have done, take a look at my most up to date resume, and find my contact information. If you are just here for code, you can <a href="https://github.com/MichaelMuinos">view my github</a>, or look at the coding section :)</p>
 			<p>Thank you!</p>
 		</div>
