--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 					<i>Pomona, California</i>
 				</span>				
 			</p>
-			<p><b>GPA: 3.51 - Dean's List</b></p>
+			<p><b>GPA: 3.52 - Cum Laude and Dean's List</b></p>
 			<div class="section-spacing-top-xs resume-desc">
 				<p>Related Courses (<b>Hover over a class for a description!</b>)</p>
 				<ul>
@@ -306,13 +306,13 @@
 						</ul>
 					<li id="class16">Artificial Intelligence</li>
 						<ul id="class16-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
-							<li>I am currently in this class. Grade will be updated soon!</li>
-							<p>Grade Received: TBA</p>
+							<li>Learned about different traversal / search algorithms such as A-star, Hill climbing, and genetic.</li>
+							<p>Grade Received: A</p>
 						</ul>
 					<li id="class17">Wireless Network Security</li>
 						<ul id="class17-desc" class="hidden-xs hidden-sm hidden-md hidden-lg" style="color: green;">
-							<li>I am currently in this class. Grade will be updated soon!</li>
-							<p>Grade Received: TBA</p>
+							<li>Learned how to sniff for packets over a network using wireshark.</li>
+							<p>Grade Received: A</p>
 						</ul>
 				</ul>
 			</div>
