--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 					<i>June 2016 - September 2016</i>
 				</span>
 			</p>
-			<p><b>Web Development Intern</b>
+			<p><b>Software Development Intern</b>
 				<span class="italic-section">
 					<i>Santa Ana, California</i>
 				</span>				
