--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			<hr>
 			<p><b>California Polytechnic State University</b>
 				<span class="italic-section">
-					<i>Expected: June 2017</i>
+					<i>Graduated: June 2017</i>
 				</span>
 			</p>
 			<p><b>Bachelor of Science in Computer Science</b>
